--- a/src/app/poll/poll.component.scss
+++ b/src/app/poll/poll.component.scss
@@ -173,6 +173,7 @@
   animation-duration: 10s;
   animation-iteration-count: infinite;
   transition-timing-function: linear;
+  overflow: initial;
 }
 
 .vote-multiple {
