--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -1,3 +1,6 @@
+$posterWidth: min(27vw, 150px);
+$posterHeight: calc(3 / 2 * $posterWidth);
+
 :host {
   display: flex;
   justify-content: space-between;
@@ -9,7 +12,7 @@
     display: flex;
     flex-direction: column;
     flex: 1;
-    padding-left: 16px;
+    padding-left: calc(#{$posterWidth} - 20px);
   }
 
   .controls {
@@ -26,10 +29,16 @@
       #eaccf83d 48%,
       #6654f114 100%
     );
+    min-height: calc(1 * $posterHeight);
     width: 100%;
     display: flex;
     align-items: center;
-    padding-top: 17px;
+    padding: 17px 16px 10px 16px;
+    margin: 13px 0 7px 20px;
+
+    & > div {
+      width: 100%;
+    }
 
     &.loader-bg {
       height: 275px;
@@ -41,20 +50,32 @@
     }
   }
 
-  $posterHeight: min(35vmin, 154px);
-  $posterWidth: calc(2 / 3 * $posterHeight);
+  .poster-container {
+    position: absolute;
+    top: -19px;
+    left: -22px;
+    z-index: 2;
+    border-radius: 6px;
+  }
 
   .poster {
     height: $posterHeight;
     width: $posterWidth;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
     margin-bottom: 19px;
+    border-radius: 5px;
   }
 
   .title {
-    line-height: 0.95em;
+    line-height: 0.9em;
+    margin-bottom: 7px;
     font-size: 1.2em;
     padding-bottom: 5px;
+    flex: 1;
+  }
+
+  .original-title {
+    font-size: 0.7em;
   }
 
   .movie-info {
@@ -64,9 +85,17 @@
     justify-content: flex-end;
   }
 
+  .extra-info {
+    font-size: 11px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    // font-family: Roboto, sans-serif;
+  }
+
   .subtitle {
     display: flex;
     flex-wrap: wrap;
+    font-size: 0.75em;
 
     .basics {
       padding-right: 10px;
@@ -78,13 +107,7 @@
     }
   }
 
-  .year,
-  .runtime {
-    font-size: 0.75em;
-  }
-
   .separator {
-    font-size: 0.6em;
     padding: 0 4px;
   }
 
@@ -107,6 +130,7 @@
     margin: 0;
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
 
     .movie-rating {
       display: flex;
@@ -114,7 +138,7 @@
       font-family: "Product Sans Bold";
       border-radius: 2px;
       background-color: #6cd577;
-      padding: 1px 4px 1px 8px;
+      padding: 1px 6px;
       margin: 2px;
 
       &.imdb {
@@ -171,11 +195,16 @@
     color: #ccc;
     padding-bottom: 10px;
     padding-top: 9px;
+
+    flex-grow: 1;
+    align-items: flex-end;
+    justify-content: center;
+    display: flex;
   }
 
   .bg {
     position: absolute;
-    top: 0;
+    top: 13px;
     left: 0;
     height: 3px;
     width: 0%;
@@ -197,6 +226,12 @@
     flex-direction: column;
   }
 
+  .creator {
+    position: relative !important;
+    top: unset !important;
+    right: unset !important;
+  }
+
   .reactions {
     & > * {
       margin-left: 3px;
@@ -204,7 +239,7 @@
 
     min-height: 14px;
     margin-left: -16px;
-    padding: 0 58px 16px 0;
+    padding: 0 58px 16px 77px;
     margin-right: -16px;
     margin-bottom: -10px;
     border-bottom-left-radius: 4px;
@@ -285,7 +320,7 @@
     position: absolute;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
-    top: $posterHeight;
+    top: calc(#{$posterHeight} - 16px);
     width: $posterWidth;
     font-size: 17px;
     padding: 0 0 4px;
@@ -487,7 +522,7 @@
 
 .tagline {
   font-family: "Fira Sans", sans-serif;
-  font-size: 0.77em;
+  font-size: 1.3em;
   margin-bottom: 10px;
 }
 
@@ -503,3 +538,96 @@
     user-select: none;
   }
 }
+
+.backdrop {
+  height: 190px;
+  background-size: contain;
+}
+
+// Movie rating chart
+$donut-center-color: #09083a;
+$donut-font-weight: 700;
+
+.chart {
+  position: absolute;
+  z-index: 3;
+  top: -3px;
+  right: 3px;
+}
+
+// Chart base
+.donut-chart {
+  position: relative;
+  border-radius: 50%;
+
+  &:before,
+  &:after {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  &:before {
+    border-radius: 50%;
+    background: $donut-center-color;
+    content: "";
+  }
+
+  &:after {
+    font: {
+      weight: $donut-font-weight;
+    }
+    z-index: 1;
+  }
+}
+
+.director {
+  font-family: "Product Sans Bold";
+}
+
+:root {
+  --var: 31;
+}
+
+// Donut chart mixin
+@mixin donut-chart(
+  $name,
+  $size,
+  $val,
+  $base-color,
+  $val-color,
+  $center-color: null
+) {
+  $perc: calc(val($val, 50) * 3.6);
+
+  // Donut chart
+  [data-chart="#{$name}"] {
+    .donut-chart {
+      width: $size;
+      height: $size;
+      background-color: $base-color;
+      background: conic-gradient(
+        $val-color 0deg,
+        $val-color #{$perc}deg,
+        $base-color #{$perc}deg
+      );
+
+      &:before {
+        width: $size / 1.5;
+        height: $size / 1.5;
+        @if $center-color {
+          background-color: $center-color;
+        }
+      }
+
+      &:after {
+        content: "#{$val}%";
+        color: $base-color;
+        font-size: $size / 3.5;
+      }
+    }
+  }
+} // End donut chart mixin
+
+@include donut-chart("3", 35px, var(--var, 50), #fff, #f2cd5c);
