--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -325,12 +325,13 @@ $posterHeight: calc(3 / 2 * $posterWidth);
     font-size: 17px;
     padding: 0 0 4px;
     box-shadow: 1px 1px 11px 0px #0000000f;
-    background-image: linear-gradient(0deg, #484747 75%, transparent);
+    background-image: linear-gradient(0deg, #484747d9 75%, transparent);
     background-position-y: 65px;
     background-size: calc($posterWidth + 20px) 66px;
-    transition: height 0.4s ease-out;
+    transition: height 0.4s ease-out, opacity 0.4s ease-in-out;
     height: 39px;
     overflow: hidden;
+    opacity: 1;
 
     .reaction {
       position: relative;
@@ -372,12 +373,14 @@ $posterHeight: calc(3 / 2 * $posterWidth);
     &:not(.open) {
       background-position-y: 0;
       height: 28px;
+      padding: 0;
+      opacity: 0.5;
 
       .reaction {
         max-height: 17px;
 
         i {
-          opacity: 0.7;
+          opacity: 1;
         }
       }
 
