Add multiple sizes for movie score component. Fix issue with currently streaming container and poster size.

--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.html
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.html
@@ -70,6 +70,7 @@
             class="cursor-pointer"
             (click)="openTmdb(movie.id)"
             [value]="movie.tmdbRating"
+            size="m"
           ></movie-score>
           <div
             class="available-short"
@@ -313,6 +314,7 @@
                 class="cursor-pointer"
                 (click)="openTmdb(data.movie.id)"
                 [value]="recommendation.vote_average"
+                size="xs"
               ></movie-score>
               <!-- <div class="recommendation-title">{{ recommendation.title }}</div>
               <div class="recommendation-year">
