--- a/src/app/movie-poll-item/movie-poll-item.component.html
+++ b/src/app/movie-poll-item/movie-poll-item.component.html
@@ -24,6 +24,7 @@
                 class="cursor-pointer"
                 (click)="openTmdb(data.movie.id)"
                 [value]="status.movie.tmdbRating"
+                size="s"
               ></movie-score>
             </div>
             <div
