--- a/src/app/movie-poll-item/movie-score/movie-score.component.html
+++ b/src/app/movie-poll-item/movie-score/movie-score.component.html
@@ -1,4 +1,4 @@
-<div class="movie-score-container">
+<div class="movie-score-container" [ngClass]="'size-' + size">
   <div class="donut" [style]="background"></div>
   <div class="rating">{{ percent | number : "1.0-0" }}<sup>%</sup></div>
 </div>
