--- a/src/app/movie-poll-item/movie-score/movie-score.component.scss
+++ b/src/app/movie-poll-item/movie-score/movie-score.component.scss
@@ -1,60 +1,79 @@
-.movie-score-container {
-  position: relative;
+@use "sass:math";
 
-  width: 28px;
-  max-width: 28px;
-  height: 28px;
-  align-items: center;
-}
+@mixin movie-score-size($size, $line-width) {
+  font-size: math.div($size, 28px) * 12px;
 
-.donut {
-  display: block;
-  border-radius: 100%;
-  width: 28px;
-  height: 28px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  box-shadow: 0 0 0px 0px rgba(33, 33, 33, 0.568627451), 0 0 0 2px #481786;
+  .donut {
+    height: $size;
+    width: $size;
 
-  &::after {
-    content: "";
-    display: block;
-    position: absolute;
-    width: 25px;
-    height: 25px;
-    background: #481786;
-    border-radius: 50%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    &::after {
+      width: calc(#{$size} - #{$line-width});
+      height: calc(#{$size} - #{$line-width});
+    }
+  }
+  .rating {
+    height: $size;
   }
 }
 
-.rating {
-  display: flex;
-  height: 28px;
-  justify-content: center;
+.movie-score-container {
+  &.size-s {
+    @include movie-score-size(28px, 3px);
+  }
+  &.size-m {
+    @include movie-score-size(35px, 4px);
+  }
+  &.size-xs {
+    @include movie-score-size(23px, 2px);
+  }
+
+  position: relative;
   align-items: center;
-  font-weight: 400;
-  letter-spacing: 0px;
 
-  font-family: Product Sans;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 12px;
-  color: white;
-  //   padding: 0 1px 0 0;
+  .donut {
+    display: block;
+    border-radius: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 0 0px 0px rgba(33, 33, 33, 0.568627451), 0 0 0 2px #481786;
 
-  sup {
-    position: relative;
-    top: -2px;
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      background: #481786;
+      border-radius: 50%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+  }
 
-    font-size: 7px;
-    padding-left: 1px;
-    margin-right: -3px;
+  .rating {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 400;
+    letter-spacing: 0px;
+
+    font-family: Product Sans;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 1em;
+    color: white;
+
+    sup {
+      position: relative;
+      top: -2px;
+
+      font-size: 0.7em;
+      padding-left: 1px;
+      margin-right: -3px;
+    }
   }
 }
